--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -21,9 +21,7 @@
           <button class="btn btn-warning mx-2">
             <fa-icon [icon]="faPenToSquare"></fa-icon>
           </button>
-          <button class="btn btn-danger text-right">
-            <fa-icon [icon]="faTrash"></fa-icon>
-          </button>
+          <app-modal-delete-product></app-modal-delete-product>
         </div>
       </button>
 
