Improving the view

--- a/src/app/price-history-chart/price-history-chart.component.html
+++ b/src/app/price-history-chart/price-history-chart.component.html
@@ -1,4 +1,4 @@
-<div class="bg-light">
+<div>
     <canvas baseChart
             [datasets]=this.servicio.getPrecios()
             [labels]=this.servicio.getFechas()
