--- a/src/app/product-panel/product-panel.component.html
+++ b/src/app/product-panel/product-panel.component.html
@@ -1,6 +1,8 @@
 <div class="container-fluid">
-  <h3 class="pt-4">{{this.servicio.articuloActual?.name || "Panel principal"}}</h3>
-  <div class="row justify-content-around p-3">
+
+  <h4 class="titulo p-3">{{this.servicio.articuloActual?.name || "Panel principal"}}</h4>
+ 
+  <div class="row justify-content-around botones p-2">
     <app-modal-add-product ></app-modal-add-product>
     <button class="btn btn-primary" (click)="addProduct()">Ver pantalla completa</button>
     <button class="btn btn-primary">Personalizar gráfica</button>
@@ -11,10 +13,13 @@
         <button ngbDropdownItem>Semana</button>
         <button ngbDropdownItem>Mes</button>
       </div>
-    </div>
+    </div> 
 
   </div>
-  <app-price-history-chart [variable]="title"></app-price-history-chart>
+
+   <!-- <div class="container"> -->
+    <app-price-history-chart></app-price-history-chart>
+   <!-- </div> -->
 
 </div>
 
