--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -18,9 +18,10 @@
           </div>
         </div>
         <div class=" text-right mt-2">
-          <button class="btn btn-warning mx-2">
+          <!-- <button class="btn btn-warning mx-2">
             <fa-icon [icon]="faPenToSquare"></fa-icon>
-          </button>
+          </button> -->
+          <app-modal-edit-product></app-modal-edit-product>
           <app-modal-delete-product></app-modal-delete-product>
         </div>
       </button>
